--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact</a></li>
-            <!-- <p>Login</p>
-            <button>Register</button> -->
+            <p>Login</p>
+            <button>Register</button>
         </ul>
     </nav>
     <div class="cnt1">
