Improved design & responsiveness

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </ul>
         </div>
         <hr>
-        <div class="contain">
+        <div class="foot">
             <ul class="bottom" >
                 <li>Terms</li>
                 <li>Privacy</li>
