--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <span class="content">
                 <h1>Resources for makers & Creatives to learn, sell & grow</h1>
             </span>
-            <span class="line">
+            <p class="line">
                 The only corporate card and spend management platform designed to help you spend less.
-            </span>
+            </p>
             <div class="btn">
                 <button id="btn1">Get Started</button>
                 <button id="btn2">View Pricing</button>
@@ -156,7 +156,7 @@
                 <li>Security</li>
             </ul>
             <ul>
-                <li>&copy;2022 GroPro | All Rights Reserved</li>
+                <li>&copy;SHORYA | All Rights Reserved</li>
             </ul>
         </div>
     </footer>
